# andon

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  action.yml  pyproject.toml  server.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  refresh-demo.yml
docs/: checks.md
examples/quarterly-report/: README.md  andon.yaml  make_example.py  report.xlsx
examples/quarterly-report/data/: orders.csv
scripts/: make_demo_svg.py
skills/verify-with-andon/: SKILL.md
src/andon/: __init__.py  cli.py  diff.py  engine.py  errors.py  mcp_server.py  render.py  result.py  sources.py  spec.py  tolerance.py
src/andon/checks/: __init__.py  excel_integrity.py  internal.py  plausibility.py  reconcile.py  schema.py
tests/: conftest.py  test_cli.py  test_csv_options.py  test_diff.py  test_duckdb.py  test_engine.py  test_excel_integrity.py  test_internal.py  test_json_sources.py  test_mcp_tools.py  test_plausibility.py  test_reconcile.py  test_review_regressions.py  test_schema.py  test_sources.py  test_spec.py  test_tolerance.py
